# Leibniz

./: .ghci  Leibniz.cabal
.stack-work/install/72e7e322/flag-cache/: Leibniz-0.1.0.0-ae49e49c1b58655a54cf301acd0aa8b9
.stack-work/install/72e7e322/pkgdb/: Leibniz-0.1.0.0-0d6534220fa62882198ccca723482a6f.conf  package.cache
.stack-work/install/i386-windows/lts-6.10/7.10.3/flag-cache/: Leibniz-0.1.0.0-b6ea38f99e0cf207c87fa6cdb95529d6
.stack-work/install/i386-windows/lts-6.10/7.10.3/lib/i386-windows-ghc-7.10.3/Leibniz-0.1.0.0-4HbkS7GG3563vKXzubBV4Y/Leibniz/: Constants.hi
.stack-work/install/i386-windows/lts-6.10/7.10.3/pkgdb/: Leibniz-0.1.0.0-b6ea38f99e0cf207c87fa6cdb95529d6.conf  package.cache
src/: Leibniz.hs
src/Leibniz/: Constants.hs  Trigonometry.hs
