name:                Leibniz
version:             0.1.0.0
synopsis:            Wholesome mathematical staple food
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/Leibniz#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, 2016;
category:            <mathematics>
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Leibniz, Leibniz.Constants, Leibniz.Trigonometry
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Leibniz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       Leibniz
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/SwiftsNamesake/Leibniz
